src/objects/Workplan_Stage__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <formula>Opportunity__r.AccountId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>All_Assignments_Must_Be_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>All Assignments Must Be Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Order__c</fullName>
        <label>Display Order</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duration_Business_Hours__c</fullName>
        <label>Duration (Business Hours)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duration_Hours__c</fullName>
        <label>Duration (Hours)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Implementation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Implementation</label>
        <referenceTo>AIA_Implementation__c</referenceTo>
        <relationshipLabel>Workplan Stage</relationshipLabel>
        <relationshipName>AIA_Workplan_Stage1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mark_Not_Required__c</fullName>
        <description>Displays a &quot;not required&quot; button that allows the user to mark a SubProcess as not required when the Workplan Stage Status is &quot;Not Started&quot;</description>
        <formula>IF(ISPICKVAL(Status__c, &quot;Not Started&quot;), HYPERLINK(&quot;/apex/AIA_Workplan_SubProcess?type=mnr&amp;Id=&quot;+Id, IMAGE(&quot;/servlet/servlet.FileDownload?file=01563000000DYPu&quot;, &quot;Mark as Not Required&quot;, 25, 25), &quot;_self&quot;), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mark Not Required</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>AIA_Workplan_Stage</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <formula>Workplan_Type_Stage__r.Display_Order__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Workplan_Stage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Workplan Stage</label>
        <referenceTo>Workplan_Stage__c</referenceTo>
        <relationshipLabel>Workplan Stage</relationshipLabel>
        <relationshipName>Workplan_Stage</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Workplan_Type_Stage__c</fullName>
        <formula>TEXT(Workplan_Type_Stage__r.Stage_Category__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Workplan Type Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Start_SubProcess__c</fullName>
        <description>Displays a &quot;play&quot; button that allows the user to start a SubProcess when the Workplan Stage Status is &quot;Not Started&quot;</description>
        <formula>IF(ISPICKVAL(Status__c, &quot;Not Started&quot;), HYPERLINK(&quot;/apex/AIA_Workplan_SubProcess?type=ssp&amp;Id=&quot;+Id, IMAGE(&quot;/servlet/servlet.FileDownload?file=01563000000DYPz&quot;, &quot;Start&quot;, 25, 25), &quot;_self&quot;), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start SubProcess</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tasks_Completed__c</fullName>
        <formula>of_Completed_Tasks__c / of_Total_Tasks__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Tasks Completed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Workplan_Stage_Category__c</fullName>
        <formula>TEXT(Workplan_Type_Stage__r.Stage_Category__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Workplan Stage Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Workplan_Stage__c</fullName>
        <formula>TEXT(Workplan_Type_Stage__r.Stage__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Workplan Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Workplan_Type_Stage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Workplan Type Stage</label>
        <referenceTo>Workplan_Type_Stage__c</referenceTo>
        <relationshipName>Workplan_Type_Stage</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Workplan_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Workplan Type</label>
        <referenceTo>AIA_Workplan_Type__c</referenceTo>
        <relationshipLabel>Workplan Stage</relationshipLabel>
        <relationshipName>Workplan_Stage</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>of_Completed_Tasks__c</fullName>
        <label># of Completed Tasks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Total_Tasks__c</fullName>
        <label># of Total Tasks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Workplan Stage</label>
    <nameField>
        <displayFormat>WS-{000000}</displayFormat>
        <label>Workplan Stage Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Workplan Stage</pluralLabel>
    <recordTypes>
        <fullName>Process</fullName>
        <active>true</active>
        <label>Process</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sub_Process</fullName>
        <active>true</active>
        <label>Sub-Process</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>EWPS001</fullName>
        <active>true</active>
        <description>End date Cannot Be Earlier than Start Date</description>
        <errorConditionFormula>End_Date__c   &lt;   Start_Date__c</errorConditionFormula>
        <errorDisplayField>End_Date__c</errorDisplayField>
        <errorMessage>EWPS001: End date Cannot Be Earlier than Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EWPS002</fullName>
        <active>true</active>
        <description>User cannot change the status once it is &quot;Completed&quot;</description>
        <errorConditionFormula>ISPICKVAL(PRIORVALUE( Status__c ),&quot;Completed&quot;)&amp;&amp; ISCHANGED( Status__c )</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>EWPS002: User cannot change the status once it is &quot;Completed&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EWPS003</fullName>
        <active>true</active>
        <description>User cannot change the status once it is &quot;Not Required&quot;</description>
        <errorConditionFormula>ISPICKVAL(PRIORVALUE( Status__c ),&quot;Not Required&quot;)&amp;&amp; ISCHANGED( Status__c )</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>EWPS003: User cannot change the status once it is &quot;Not Required&quot;</errorMessage>
    </validationRules>
</CustomObject>